pkgs/cupertino_http/lib/src/cronet.dart


  late final _Cronet_UrlRequestCallback_CreateWithPtr = _lookup<
          ffi.NativeFunction<
              Cronet_UrlRequestCallbackPtr Function(
                  Cronet_UrlRequestCallback_OnRedirectReceivedFunc,
                  Cronet_UrlRequestCallback_OnResponseStartedFunc,
                  Cronet_UrlRequestCallback_OnReadCompletedFunc,
                  Cronet_UrlRequestCallback_OnSucceededFunc,
                  Cronet_UrlRequestCallback_OnFailedFunc,
                  Cronet_UrlRequestCallback_OnCanceledFunc)>>(
      'Cronet_UrlRequestCallback_CreateWith');
  late final _Cronet_UrlRequestCallback_CreateWith =
      _Cronet_UrlRequestCallback_CreateWithPtr.asFunction<
          Cronet_UrlRequestCallbackPtr Function(
              Cronet_UrlRequestCallback_OnRedirectReceivedFunc,
              Cronet_UrlRequestCallback_OnResponseStartedFunc,
              Cronet_UrlRequestCallback_OnReadCompletedFunc,
              Cronet_UrlRequestCallback_OnSucceededFunc,
              Cronet_UrlRequestCallback_OnFailedFunc,
              Cronet_UrlRequestCallback_OnCanceledFunc)>();

  /// Create an instance of Cronet_UploadDataSink.
  Cronet_UploadDataSinkPtr Cronet_UploadDataSink_Create() {
    return _Cronet_UploadDataSink_Create();
  }

  late final _Cronet_UploadDataSink_CreatePtr =
      _lookup<ffi.NativeFunction<Cronet_UploadDataSinkPtr Function()>>(
          'Cronet_UploadDataSink_Create');
  late final _Cronet_UploadDataSink_Create = _Cronet_UploadDataSink_CreatePtr
      .asFunction<Cronet_UploadDataSinkPtr Function()>();

  /// Destroy an instance of Cronet_UploadDataSink.
  void Cronet_UploadDataSink_Destroy(
    Cronet_UploadDataSinkPtr self,
  ) {
    return _Cronet_UploadDataSink_Destroy(
      self,
    );
  }

  late final _Cronet_UploadDataSink_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_UploadDataSinkPtr)>>(
          'Cronet_UploadDataSink_Destroy');
  late final _Cronet_UploadDataSink_Destroy = _Cronet_UploadDataSink_DestroyPtr
      .asFunction<void Function(Cronet_UploadDataSinkPtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_UploadDataSink_SetClientContext(
    Cronet_UploadDataSinkPtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_UploadDataSink_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_UploadDataSink_SetClientContextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_UploadDataSinkPtr,
              Cronet_ClientContext)>>('Cronet_UploadDataSink_SetClientContext');
  late final _Cronet_UploadDataSink_SetClientContext =
      _Cronet_UploadDataSink_SetClientContextPtr.asFunction<
          void Function(Cronet_UploadDataSinkPtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_UploadDataSink_GetClientContext(
    Cronet_UploadDataSinkPtr self,
  ) {
    return _Cronet_UploadDataSink_GetClientContext(
      self,
    );
  }

  late final _Cronet_UploadDataSink_GetClientContextPtr = _lookup<
          ffi.NativeFunction<
              Cronet_ClientContext Function(Cronet_UploadDataSinkPtr)>>(
      'Cronet_UploadDataSink_GetClientContext');
  late final _Cronet_UploadDataSink_GetClientContext =
      _Cronet_UploadDataSink_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_UploadDataSinkPtr)>();

  /// Concrete methods of Cronet_UploadDataSink implemented by Cronet.
  /// The app calls them to manipulate Cronet_UploadDataSink.
  void Cronet_UploadDataSink_OnReadSucceeded(
    Cronet_UploadDataSinkPtr self,
    int bytes_read,
    bool final_chunk,
  ) {
    return _Cronet_UploadDataSink_OnReadSucceeded(
      self,
      bytes_read,
      final_chunk,
    );
  }

  late final _Cronet_UploadDataSink_OnReadSucceededPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_UploadDataSinkPtr, ffi.Uint64,
              ffi.Bool)>>('Cronet_UploadDataSink_OnReadSucceeded');
  late final _Cronet_UploadDataSink_OnReadSucceeded =
      _Cronet_UploadDataSink_OnReadSucceededPtr.asFunction<
          void Function(Cronet_UploadDataSinkPtr, int, bool)>();

  void Cronet_UploadDataSink_OnReadError(
    Cronet_UploadDataSinkPtr self,
    Cronet_String error_message,
  ) {
    return _Cronet_UploadDataSink_OnReadError(
      self,
      error_message,
    );
  }

  late final _Cronet_UploadDataSink_OnReadErrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_UploadDataSinkPtr,
              Cronet_String)>>('Cronet_UploadDataSink_OnReadError');
  late final _Cronet_UploadDataSink_OnReadError =
      _Cronet_UploadDataSink_OnReadErrorPtr.asFunction<
          void Function(Cronet_UploadDataSinkPtr, Cronet_String)>();

  void Cronet_UploadDataSink_OnRewindSucceeded(
    Cronet_UploadDataSinkPtr self,
  ) {
    return _Cronet_UploadDataSink_OnRewindSucceeded(
      self,
    );
  }

  late final _Cronet_UploadDataSink_OnRewindSucceededPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_UploadDataSinkPtr)>>(
          'Cronet_UploadDataSink_OnRewindSucceeded');
  late final _Cronet_UploadDataSink_OnRewindSucceeded =
      _Cronet_UploadDataSink_OnRewindSucceededPtr.asFunction<
          void Function(Cronet_UploadDataSinkPtr)>();

  void Cronet_UploadDataSink_OnRewindError(
    Cronet_UploadDataSinkPtr self,
    Cronet_String error_message,
  ) {
    return _Cronet_UploadDataSink_OnRewindError(
      self,
      error_message,
    );
  }

  late final _Cronet_UploadDataSink_OnRewindErrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_UploadDataSinkPtr,
              Cronet_String)>>('Cronet_UploadDataSink_OnRewindError');
  late final _Cronet_UploadDataSink_OnRewindError =
      _Cronet_UploadDataSink_OnRewindErrorPtr.asFunction<
          void Function(Cronet_UploadDataSinkPtr, Cronet_String)>();

  /// Concrete interface Cronet_UploadDataSink is implemented by Cronet.
  /// The app can use this for testing / mocking.
  Cronet_UploadDataSinkPtr Cronet_UploadDataSink_CreateWith(
    Cronet_UploadDataSink_OnReadSucceededFunc OnReadSucceededFunc,
    Cronet_UploadDataSink_OnReadErrorFunc OnReadErrorFunc,
    Cronet_UploadDataSink_OnRewindSucceededFunc OnRewindSucceededFunc,
    Cronet_UploadDataSink_OnRewindErrorFunc OnRewindErrorFunc,
  ) {
    return _Cronet_UploadDataSink_CreateWith(
      OnReadSucceededFunc,
      OnReadErrorFunc,
      OnRewindSucceededFunc,
      OnRewindErrorFunc,
    );
  }

  late final _Cronet_UploadDataSink_CreateWithPtr = _lookup<
          ffi.NativeFunction<
              Cronet_UploadDataSinkPtr Function(
                  Cronet_UploadDataSink_OnReadSucceededFunc,
                  Cronet_UploadDataSink_OnReadErrorFunc,
                  Cronet_UploadDataSink_OnRewindSucceededFunc,
                  Cronet_UploadDataSink_OnRewindErrorFunc)>>(
      'Cronet_UploadDataSink_CreateWith');
  late final _Cronet_UploadDataSink_CreateWith =
      _Cronet_UploadDataSink_CreateWithPtr.asFunction<
          Cronet_UploadDataSinkPtr Function(
              Cronet_UploadDataSink_OnReadSucceededFunc,
              Cronet_UploadDataSink_OnReadErrorFunc,
              Cronet_UploadDataSink_OnRewindSucceededFunc,
              Cronet_UploadDataSink_OnRewindErrorFunc)>();

  /// Destroy an instance of Cronet_UploadDataProvider.
  void Cronet_UploadDataProvider_Destroy(
    Cronet_UploadDataProviderPtr self,
  ) {
    return _Cronet_UploadDataProvider_Destroy(
      self,
    );
  }

  late final _Cronet_UploadDataProvider_DestroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Cronet_UploadDataProviderPtr)>>(
      'Cronet_UploadDataProvider_Destroy');
  late final _Cronet_UploadDataProvider_Destroy =
      _Cronet_UploadDataProvider_DestroyPtr.asFunction<
          void Function(Cronet_UploadDataProviderPtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_UploadDataProvider_SetClientContext(
    Cronet_UploadDataProviderPtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_UploadDataProvider_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_UploadDataProvider_SetClientContextPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  Cronet_UploadDataProviderPtr, Cronet_ClientContext)>>(
      'Cronet_UploadDataProvider_SetClientContext');
  late final _Cronet_UploadDataProvider_SetClientContext =
      _Cronet_UploadDataProvider_SetClientContextPtr.asFunction<
          void Function(Cronet_UploadDataProviderPtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_UploadDataProvider_GetClientContext(
    Cronet_UploadDataProviderPtr self,
  ) {
    return _Cronet_UploadDataProvider_GetClientContext(
      self,
    );
  }

  late final _Cronet_UploadDataProvider_GetClientContextPtr = _lookup<
          ffi.NativeFunction<
              Cronet_ClientContext Function(Cronet_UploadDataProviderPtr)>>(
      'Cronet_UploadDataProvider_GetClientContext');
  late final _Cronet_UploadDataProvider_GetClientContext =
      _Cronet_UploadDataProvider_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_UploadDataProviderPtr)>();

  /// Abstract interface Cronet_UploadDataProvider is implemented by the app.
  /// The following concrete methods forward call to app implementation.
  /// The app doesn't normally call them.
  int Cronet_UploadDataProvider_GetLength(
    Cronet_UploadDataProviderPtr self,
  ) {
    return _Cronet_UploadDataProvider_GetLength(
      self,
    );
  }

  late final _Cronet_UploadDataProvider_GetLengthPtr = _lookup<
          ffi.NativeFunction<ffi.Int64 Function(Cronet_UploadDataProviderPtr)>>(
      'Cronet_UploadDataProvider_GetLength');
  late final _Cronet_UploadDataProvider_GetLength =
      _Cronet_UploadDataProvider_GetLengthPtr.asFunction<
          int Function(Cronet_UploadDataProviderPtr)>();

  void Cronet_UploadDataProvider_Read(
    Cronet_UploadDataProviderPtr self,
    Cronet_UploadDataSinkPtr upload_data_sink,
    Cronet_BufferPtr buffer,
  ) {
    return _Cronet_UploadDataProvider_Read(
      self,
      upload_data_sink,
      buffer,
    );
  }

  late final _Cronet_UploadDataProvider_ReadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Cronet_UploadDataProviderPtr,
              Cronet_UploadDataSinkPtr,
              Cronet_BufferPtr)>>('Cronet_UploadDataProvider_Read');
  late final _Cronet_UploadDataProvider_Read =
      _Cronet_UploadDataProvider_ReadPtr.asFunction<
          void Function(Cronet_UploadDataProviderPtr, Cronet_UploadDataSinkPtr,
              Cronet_BufferPtr)>();

  void Cronet_UploadDataProvider_Rewind(
    Cronet_UploadDataProviderPtr self,
    Cronet_UploadDataSinkPtr upload_data_sink,
  ) {
    return _Cronet_UploadDataProvider_Rewind(
      self,
      upload_data_sink,
    );
  }

  late final _Cronet_UploadDataProvider_RewindPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_UploadDataProviderPtr,
              Cronet_UploadDataSinkPtr)>>('Cronet_UploadDataProvider_Rewind');
  late final _Cronet_UploadDataProvider_Rewind =
      _Cronet_UploadDataProvider_RewindPtr.asFunction<
          void Function(
              Cronet_UploadDataProviderPtr, Cronet_UploadDataSinkPtr)>();

  void Cronet_UploadDataProvider_Close(
    Cronet_UploadDataProviderPtr self,
  ) {
    return _Cronet_UploadDataProvider_Close(
      self,
    );
  }

  late final _Cronet_UploadDataProvider_ClosePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Cronet_UploadDataProviderPtr)>>(
      'Cronet_UploadDataProvider_Close');
  late final _Cronet_UploadDataProvider_Close =
      _Cronet_UploadDataProvider_ClosePtr.asFunction<
          void Function(Cronet_UploadDataProviderPtr)>();
